# sisop2

./: .gitignore  CMakeLists.txt  Dockerfile.client  Dockerfile.server  Makefile  READ.ME  README.MD  README.md  myClient  myServer  test_env.sh
client/: client.c  client_actions.c  client_actions.h  client_sync.c  client_sync.h
common/: packet.c  packet.h
include/: Client.hpp  Connection.hpp  FileManager.hpp  Packet.hpp  Server.hpp
server/: server.c  server_request_handler.c  server_request_handler.h  server_session.c  server_session.h  server_utils.c  server_utils.h
src/: Client.cpp  Connection.cpp  FileManager.cpp  Packet.cpp  Server.cpp  main_client.cpp  main_server.cpp
sync_dir_jean/: teste2.txt
